third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/numbered-positional-tuple.stderr
error: ambiguous reference to positional arguments by number in a tuple struct; change this to a named argument
 --> tests/ui/numbered-positional-tuple.rs:4:61
  |
4 | #[error("invalid rdo_lookahead_frames {0} (expected < {})", i32::MAX)]
  |                                                             ^^^^^^^^
